--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title:       Burakowa
+title:       burakowa.net
 email:       ''
 description: ''
 baseurl:     '' # The subpath of your site, e.g. /blog
 url:         'https://type-jekyll.aspirethemes.com/' # The base hostname & protocol for your site
 twitter:     ''
 github:      ''
-instagram:   ''
+instagram:   'https://www.instagram.com/burakowa_net/'
 facebook:    ''
 
 markdown:  kramdown
